created object to manage game input. updated character creator with new input system